plugins {
    id "java"
    id "application"
    id "com.github.johnrengelman.shadow" version "6.0.0"
    id "com.github.ben-manes.versions" version "0.31.0"
}

group "de.lispyclouds"
version "1.0-SNAPSHOT"

repositories {
    mavenCentral()
    maven { url "https://clojars.org/repo" }
}

def cruxVersion = "20.09-1.11.0-beta"
def helidonVersion = "2.0.2"

dependencies {
    implementation "io.helidon.webserver:helidon-webserver:$helidonVersion"
    implementation "io.helidon.config:helidon-config:$helidonVersion"
    implementation "juxt:crux-core:$cruxVersion"
    implementation "juxt:crux-jdbc:$cruxVersion"
    implementation "org.postgresql:postgresql:42.2.16"
    implementation "metosin:jsonista:0.2.7"
}

compileJava {
    sourceCompatibility = "14"
    targetCompatibility = "14"
}

mainClassName = "Main"

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

shadowJar {
    archiveFileName = "app.jar"
}
